<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#ffffff"
            app:titleTextColor="#ffffff" />

        <TextView
            android:id="@+id/resultField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            style="@style/ResultTextViewStyle"/>

        <EditText
            android:id="@+id/exampleField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ExampleTextViewStyle"
            android:text="@string/example"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/openSkob"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_openSkob"
             />

            <Button
                android:id="@+id/closeSkob"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_closeSkob"/>

            <Button
                android:id="@+id/persent"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_persent"/>

            <Button
                android:id="@+id/delete"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_delete"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_7"
                style="@style/ButtonStyle"

                android:layout_weight="1"
                android:text="@string/string_7"/>

            <Button
                android:id="@+id/number_8"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_8"/>

            <Button
                android:id="@+id/number_9"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_9"/>

            <Button
                android:id="@+id/division"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_division"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_4"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_4"/>

            <Button
                android:id="@+id/number_5"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_5"/>

            <Button
                android:id="@+id/number_6"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_6"/>

            <Button
                android:id="@+id/multiplication"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_multiplication"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_1"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_1"/>

            <Button
                android:id="@+id/number_2"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_2"/>

            <Button
                android:id="@+id/number_3"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_3" />

            <Button
                android:id="@+id/difference"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_difference"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/point"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_point"/>

            <Button
                android:id="@+id/number_0"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_0"/>

            <Button
                android:id="@+id/result"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_result"/>

            <Button
                android:id="@+id/sum"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/string_sum"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
